# GBSunny

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
core/: CMakeLists.txt  gb.cpp  gb.h
core/cartridge/: boot_rom.h  cartridge.cc  cartridge.h  cartridge_info.cc  cartridge_info.h
core/cartridge/modes/: mbc1.cpp  mbc2.cpp  mbc3.cpp
core/cpu/: cpu.cpp  cpu.h  cpu_opcodes.cpp  opcode_cycles.h  opcode_names.h  register_file.cpp  register_file.h  register_types.h
core/mmu/: MMU.cpp  MMU.h  mmu.cpp  mmu.h
core/ppu/: ppu.cpp  ppu.h  ppu_base.h  types.h
core/ppu/fifo_ppu/: ppu_fifo.cpp  ppu_fifo.h
core/ppu/scanline_ppu/: ppu_scanline.cpp  ppu_scanline.h
core/ppu/tick_fifo_ppu/: ppu_fifo_types.h  ppu_tick_fifo.cpp  ppu_tick_fifo.h
core/shared/: interrupt.cpp  interrupt.h  types.h
core/spu/: spu.cpp  spu.h
core/timer/: base_timer.h  gb_timer.cpp  gb_timer.h  gb_timer2.cpp  gb_timer2.h  timer.cpp  timer.h
core/utils/: utils.h
